--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1739,9 +1739,9 @@
  "metadata": {
   "celltoolbar": "Create Assignment",
   "kernelspec": {
-   "display_name": "Python [conda env:cpsc330]",
+   "display_name": "cpsc330",
    "language": "python",
-   "name": "conda-env-cpsc330-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1753,7 +1753,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.0"
   },
   "otter": {
    "OK_FORMAT": true,
@@ -1916,11 +1916,6 @@
       }
      ]
     }
-   }
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
