--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -207,8 +207,10 @@
     "        Returns:\n",
     "        - None\n",
     "        \"\"\"\n",
-    "        # Replace with your code\n",
-    "        ...\n",
+    "        y = y.astype(int)\n",
+    "        self.class_count = np.bincount(y)\n",
+    "        self.most_frequent_class = np.argmax(self.class_count)\n",
+    "        \n",
     "        return None  # Replace with your code\n",
     "\n",
     "    def predict(self, X):\n",
@@ -221,9 +223,9 @@
     "        Returns:\n",
     "        - y_pred (array-like, shape (n_samples,)): Predicted target labels.\n",
     "        \"\"\"\n",
-    "        predictions = np.zeros(X.shape[0])  # initializing with all predictions set to 0\n",
-    "        # Replace with your code\n",
-    "        ...\n",
+    "       \n",
+    "        predictions = np.full(X.shape[0], self.most_frequent_class)\n",
+    "        \n",
     "        return predictions\n",
     "\n",
     "    def predict_proba(self, X):\n",
@@ -237,10 +239,11 @@
     "        - probs (array-like, shape (n_samples, 2)): Predicted class probabilities.\n",
     "          Column 0 corresponds to class 0, and column 1 corresponds to class 1.\n",
     "        \"\"\"\n",
-    "        probs = np.zeros((X.shape[0], 2))  # initializing all probabilities set to 0.\n",
-    "        # Replace with your code\n",
-    "        ...\n",
-    "        return probs  # Replace with your code\n",
+    "        total = np.sum(self.class_count)\n",
+    "        \n",
+    "        probs = [self.class_count[0] / total, self.class_count[1] / total]\n",
+    "        \n",
+    "        return np.tile(probs, (X.shape[0], 1))\n",
     "\n",
     "    def score(self, X, y):\n",
     "        \"\"\"\n",
@@ -253,9 +256,9 @@
     "        Returns:\n",
     "        - accuracy (float): Accuracy of the model on the input data.\n",
     "        \"\"\"\n",
-    "        accuracy = None\n",
-    "        # Replace with your code\n",
-    "        ...\n",
+    "        y_pred = self.predict(X)\n",
+    "        accuracy = np.mean(y_pred == y)\n",
+    "        \n",
     "        return accuracy"
    ]
   },
@@ -271,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -309,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -338,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -355,12 +358,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p><strong><pre style='display: inline;'>q1</pre></strong> passed! 🌟</p>"
+      ],
+      "text/plain": [
+       "q1 results: All test cases passed!"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grader.check(\"q1\")"
    ]
