--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -411,19 +411,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>link</th>\n",
+       "      <th>content</th>\n",
+       "      <th>date</th>\n",
+       "      <th>retweets</th>\n",
+       "      <th>favorites</th>\n",
+       "      <th>mentions</th>\n",
+       "      <th>hashtags</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1698308935</th>\n",
+       "      <td>https://twitter.com/realDonaldTrump/status/169...</td>\n",
+       "      <td>Be sure to tune in and watch Donald Trump on L...</td>\n",
+       "      <td>2009-05-04 13:54:25</td>\n",
+       "      <td>510</td>\n",
+       "      <td>917</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1701461182</th>\n",
+       "      <td>https://twitter.com/realDonaldTrump/status/170...</td>\n",
+       "      <td>Donald Trump will be appearing on The View tom...</td>\n",
+       "      <td>2009-05-04 20:00:10</td>\n",
+       "      <td>34</td>\n",
+       "      <td>267</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1737479987</th>\n",
+       "      <td>https://twitter.com/realDonaldTrump/status/173...</td>\n",
+       "      <td>Donald Trump reads Top Ten Financial Tips on L...</td>\n",
+       "      <td>2009-05-08 08:38:08</td>\n",
+       "      <td>13</td>\n",
+       "      <td>19</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1741160716</th>\n",
+       "      <td>https://twitter.com/realDonaldTrump/status/174...</td>\n",
+       "      <td>New Blog Post: Celebrity Apprentice Finale and...</td>\n",
+       "      <td>2009-05-08 15:40:15</td>\n",
+       "      <td>11</td>\n",
+       "      <td>26</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1773561338</th>\n",
+       "      <td>https://twitter.com/realDonaldTrump/status/177...</td>\n",
+       "      <td>\"My persona will never be that of a wallflower...</td>\n",
+       "      <td>2009-05-12 09:07:28</td>\n",
+       "      <td>1375</td>\n",
+       "      <td>1945</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                         link  \\\n",
+       "id                                                              \n",
+       "1698308935  https://twitter.com/realDonaldTrump/status/169...   \n",
+       "1701461182  https://twitter.com/realDonaldTrump/status/170...   \n",
+       "1737479987  https://twitter.com/realDonaldTrump/status/173...   \n",
+       "1741160716  https://twitter.com/realDonaldTrump/status/174...   \n",
+       "1773561338  https://twitter.com/realDonaldTrump/status/177...   \n",
+       "\n",
+       "                                                      content  \\\n",
+       "id                                                              \n",
+       "1698308935  Be sure to tune in and watch Donald Trump on L...   \n",
+       "1701461182  Donald Trump will be appearing on The View tom...   \n",
+       "1737479987  Donald Trump reads Top Ten Financial Tips on L...   \n",
+       "1741160716  New Blog Post: Celebrity Apprentice Finale and...   \n",
+       "1773561338  \"My persona will never be that of a wallflower...   \n",
+       "\n",
+       "                           date  retweets  favorites mentions hashtags  \n",
+       "id                                                                      \n",
+       "1698308935  2009-05-04 13:54:25       510        917      NaN      NaN  \n",
+       "1701461182  2009-05-04 20:00:10        34        267      NaN      NaN  \n",
+       "1737479987  2009-05-08 08:38:08        13         19      NaN      NaN  \n",
+       "1741160716  2009-05-08 15:40:15        11         26      NaN      NaN  \n",
+       "1773561338  2009-05-12 09:07:28      1375       1945      NaN      NaN  "
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "tweets_df = pd.read_csv(\"data/realdonaldtrump.csv\", index_col=0)\n",
+    "tweets_df = pd.read_csv(\"data/Trump Tweets Archive/realdonaldtrump.csv\", index_col=0)\n",
     "tweets_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(43352, 7)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tweets_df.shape"
    ]
@@ -437,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,22 +672,22 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR COMMENT HERE\n",
-    "countvec = CountVectorizer(stop_words=\"english\")\n",
-    "\n",
-    "# YOUR COMMENT HERE\n",
+    "#Split data into training and test set with 60% of the data being used as the testing set.\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X, y, test_size=0.6, random_state=123\n",
     ")\n",
     "\n",
     "# YOUR COMMENT HERE\n",
-    "cv_score = cross_val_score(pipe, X_train, y_train).mean()\n",
+    "countvec = CountVectorizer(stop_words=\"english\")\n",
+    "\n",
+    "# YOUR COMMENT HERE\n",
+    "lr = LogisticRegression(max_iter=1000, random_state=123)\n",
     "\n",
     "# YOUR COMMENT HERE\n",
     "pipe = make_pipeline(countvec, lr)\n",
     "\n",
     "# YOUR COMMENT HERE\n",
-    "lr = LogisticRegression(max_iter=1000, random_state=123)"
+    "cv_score = cross_val_score(pipe, X_train, y_train).mean()"
    ]
   },
   {
