--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -677,16 +677,16 @@
     "    X, y, test_size=0.6, random_state=123\n",
     ")\n",
     "\n",
-    "# YOUR COMMENT HERE\n",
+    "# Create a CountVectorizer to convert text data into a numerical feature matrix, removing English stopwords.\n",
     "countvec = CountVectorizer(stop_words=\"english\")\n",
     "\n",
-    "# YOUR COMMENT HERE\n",
+    "# Initialize a Logistic Regression model with a higher number of iterations for convergence.\n",
     "lr = LogisticRegression(max_iter=1000, random_state=123)\n",
     "\n",
-    "# YOUR COMMENT HERE\n",
+    "# Create a pipeline that first vectorizes the text and then applies the logistic regression model.\n",
     "pipe = make_pipeline(countvec, lr)\n",
     "\n",
-    "# YOUR COMMENT HERE\n",
+    "# Perform cross-validation on the training data and compute the mean accuracy score.\n",
     "cv_score = cross_val_score(pipe, X_train, y_train).mean()"
    ]
   },
