--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -670,7 +670,18 @@
      "raises-exception"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8953863898500576"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Split data into training and test set with 60% of the data being used as the testing set.\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
@@ -687,12 +698,14 @@
     "pipe = make_pipeline(countvec, lr)\n",
     "\n",
     "# Perform cross-validation on the training data and compute the mean accuracy score.\n",
-    "cv_score = cross_val_score(pipe, X_train, y_train).mean()"
+    "cv_score = cross_val_score(pipe, X_train, y_train).mean()\n",
+    "\n",
+    "cv_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -700,7 +713,18 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "..."
    ]
@@ -756,25 +780,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7423875432525952"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "dummy_cv_score = None\n",
+    "dummy_clf = DummyClassifier(random_state=123)\n",
+    "dummy_cv_scores = cross_val_score(dummy_clf, X_train, y_train, cv=5)\n",
     "\n",
-    "..."
+    "dummy_cv_score = dummy_cv_scores.mean()\n",
+    "\n",
+    "dummy_cv_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p><strong><pre style='display: inline;'>q2.2</pre></strong> passed! 💯</p>"
+      ],
+      "text/plain": [
+       "q2.2 results: All test cases passed!"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grader.check(\"q2.2\")"
    ]
