--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -882,7 +882,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_Type your answer here, replacing this text._"
+    "1. The DummyClassifier score (74%) vs Logistic Regression score (89%)"
    ]
   },
   {
