complete everything except q2.3

--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -1968,7 +1968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 130,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -1977,13 +1977,13 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q3.3</pre></strong> passed! 🌟</p>"
+       "<p><strong><pre style='display: inline;'>q3.3</pre></strong> passed! 💯</p>"
       ],
       "text/plain": [
        "q3.3 results: All test cases passed!"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2049,8 +2049,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Yes, the best values of hyperparameteres found by Grid Search do agree with the results found in 3.1 and 3.2. \n",
-    "Generally speaking,  ### NEED TO CHANGE"
+    "Yes, the best hyperparameter values found by GridSearchCV agree with the results from 3.1 and 3.2. However, in general, these values do not always have to match exactly. GridSearchCV may use different cross-validation folds compared to the manual cross-validation approach used in 3.1 and 3.2, which can lead to slight variations in results. Additionally, some randomness in model training can also result in slight differences.\n"
    ]
   },
   {
@@ -2109,7 +2108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 133,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -2119,25 +2118,28 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Ellipsis"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.891780716592342\n"
+     ]
     }
    ],
    "source": [
-    "test_score = None\n",
+    "pipe_lr = make_pipeline(\n",
+    "    CountVectorizer(stop_words=\"english\", max_features=best_max_features),\n",
+    "    LogisticRegression(max_iter=1000, C=best_C, random_state=123),\n",
+    ")\n",
     "\n",
-    "..."
+    "pipe_lr.fit(X_train, y_train)\n",
+    "\n",
+    "test_score = pipe_lr.score(X_test, y_test)\n",
+    "print(test_score)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 132,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -2146,108 +2148,13 @@
     {
      "data": {
       "text/html": [
-       "<p><strong style='color: red;'><pre style='display: inline;'>q3.5</pre> results:</strong></p><p><strong><pre style='display: inline;'>q3.5 - 1</pre> result:</strong></p><pre>    ❌ Test case failed\n",
-       "    Trying:\n",
-       "        assert not test_score is None, 'Are you storing the score in the provided variable?'\n",
-       "    Expecting nothing\n",
-       "    **********************************************************************\n",
-       "    Line 1, in q3.5 0\n",
-       "    Failed example:\n",
-       "        assert not test_score is None, 'Are you storing the score in the provided variable?'\n",
-       "    Exception raised:\n",
-       "        Traceback (most recent call last):\n",
-       "          File \"/Users/moirarenata/miniconda3/envs/cpsc330/lib/python3.12/doctest.py\", line 1357, in __run\n",
-       "            exec(compile(example.source, filename, \"single\",\n",
-       "          File \"<doctest q3.5 0[0]>\", line 1, in <module>\n",
-       "            assert not test_score is None, 'Are you storing the score in the provided variable?'\n",
-       "        AssertionError: Are you storing the score in the provided variable?\n",
-       "    Trying:\n",
-       "        assert X_test.shape == (26012,), 'X_test is the wrong shape. Did you overwrite it in q2.6?'\n",
-       "    Expecting nothing\n",
-       "    ok\n",
-       "    Trying:\n",
-       "        assert y_test.shape == (26012,), 'y_test is the wrong shape. Did you overwrite it in q2.6?'\n",
-       "    Expecting nothing\n",
-       "    ok\n",
-       "    Trying:\n",
-       "        assert my_sha1(str(np.round(test_score, 2))) == '86cc84573855498bf3bf582affc07c1fecfc661c', \"The test score doesn't look correct.\"\n",
-       "    Expecting nothing\n",
-       "    **********************************************************************\n",
-       "    Line 4, in q3.5 0\n",
-       "    Failed example:\n",
-       "        assert my_sha1(str(np.round(test_score, 2))) == '86cc84573855498bf3bf582affc07c1fecfc661c', \"The test score doesn't look correct.\"\n",
-       "    Exception raised:\n",
-       "        Traceback (most recent call last):\n",
-       "          File \"/Users/moirarenata/miniconda3/envs/cpsc330/lib/python3.12/doctest.py\", line 1357, in __run\n",
-       "            exec(compile(example.source, filename, \"single\",\n",
-       "          File \"<doctest q3.5 0[3]>\", line 1, in <module>\n",
-       "            assert my_sha1(str(np.round(test_score, 2))) == '86cc84573855498bf3bf582affc07c1fecfc661c', \"The test score doesn't look correct.\"\n",
-       "                               ^^^^^^^^^^^^^^^^^^^^^^^\n",
-       "          File \"/Users/moirarenata/miniconda3/envs/cpsc330/lib/python3.12/site-packages/numpy/core/fromnumeric.py\", line 3360, in round\n",
-       "            return _wrapfunc(a, 'round', decimals=decimals, out=out)\n",
-       "                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-       "          File \"/Users/moirarenata/miniconda3/envs/cpsc330/lib/python3.12/site-packages/numpy/core/fromnumeric.py\", line 56, in _wrapfunc\n",
-       "            return _wrapit(obj, method, *args, **kwds)\n",
-       "                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-       "          File \"/Users/moirarenata/miniconda3/envs/cpsc330/lib/python3.12/site-packages/numpy/core/fromnumeric.py\", line 45, in _wrapit\n",
-       "            result = getattr(asarray(obj), method)(*args, **kwds)\n",
-       "                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-       "        TypeError: unsupported operand type(s) for *: 'NoneType' and 'float'\n",
-       "</pre>"
+       "<p><strong><pre style='display: inline;'>q3.5</pre></strong> passed! 🌈</p>"
       ],
       "text/plain": [
-       "q3.5 results:\n",
-       "    q3.5 - 1 result:\n",
-       "        ❌ Test case failed\n",
-       "        Trying:\n",
-       "            assert not test_score is None, 'Are you storing the score in the provided variable?'\n",
-       "        Expecting nothing\n",
-       "        **********************************************************************\n",
-       "        Line 1, in q3.5 0\n",
-       "        Failed example:\n",
-       "            assert not test_score is None, 'Are you storing the score in the provided variable?'\n",
-       "        Exception raised:\n",
-       "            Traceback (most recent call last):\n",
-       "              File \"/Users/moirarenata/miniconda3/envs/cpsc330/lib/python3.12/doctest.py\", line 1357, in __run\n",
-       "                exec(compile(example.source, filename, \"single\",\n",
-       "              File \"<doctest q3.5 0[0]>\", line 1, in <module>\n",
-       "                assert not test_score is None, 'Are you storing the score in the provided variable?'\n",
-       "            AssertionError: Are you storing the score in the provided variable?\n",
-       "        Trying:\n",
-       "            assert X_test.shape == (26012,), 'X_test is the wrong shape. Did you overwrite it in q2.6?'\n",
-       "        Expecting nothing\n",
-       "        ok\n",
-       "        Trying:\n",
-       "            assert y_test.shape == (26012,), 'y_test is the wrong shape. Did you overwrite it in q2.6?'\n",
-       "        Expecting nothing\n",
-       "        ok\n",
-       "        Trying:\n",
-       "            assert my_sha1(str(np.round(test_score, 2))) == '86cc84573855498bf3bf582affc07c1fecfc661c', \"The test score doesn't look correct.\"\n",
-       "        Expecting nothing\n",
-       "        **********************************************************************\n",
-       "        Line 4, in q3.5 0\n",
-       "        Failed example:\n",
-       "            assert my_sha1(str(np.round(test_score, 2))) == '86cc84573855498bf3bf582affc07c1fecfc661c', \"The test score doesn't look correct.\"\n",
-       "        Exception raised:\n",
-       "            Traceback (most recent call last):\n",
-       "              File \"/Users/moirarenata/miniconda3/envs/cpsc330/lib/python3.12/doctest.py\", line 1357, in __run\n",
-       "                exec(compile(example.source, filename, \"single\",\n",
-       "              File \"<doctest q3.5 0[3]>\", line 1, in <module>\n",
-       "                assert my_sha1(str(np.round(test_score, 2))) == '86cc84573855498bf3bf582affc07c1fecfc661c', \"The test score doesn't look correct.\"\n",
-       "                                   ^^^^^^^^^^^^^^^^^^^^^^^\n",
-       "              File \"/Users/moirarenata/miniconda3/envs/cpsc330/lib/python3.12/site-packages/numpy/core/fromnumeric.py\", line 3360, in round\n",
-       "                return _wrapfunc(a, 'round', decimals=decimals, out=out)\n",
-       "                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-       "              File \"/Users/moirarenata/miniconda3/envs/cpsc330/lib/python3.12/site-packages/numpy/core/fromnumeric.py\", line 56, in _wrapfunc\n",
-       "                return _wrapit(obj, method, *args, **kwds)\n",
-       "                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-       "              File \"/Users/moirarenata/miniconda3/envs/cpsc330/lib/python3.12/site-packages/numpy/core/fromnumeric.py\", line 45, in _wrapit\n",
-       "                result = getattr(asarray(obj), method)(*args, **kwds)\n",
-       "                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-       "            TypeError: unsupported operand type(s) for *: 'NoneType' and 'float'"
+       "q3.5 results: All test cases passed!"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2313,7 +2220,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_Type your answer here, replacing this text._"
+    "The test accuracy (0.89178) and validation accuracy (0.8956) are very similar, with the validation accuracy being slightly higher by 0.004. This small difference is likely due to random variation rather than overfitting. If the model were overfitting, we would expect the validation accuracy to be significantly higher than the test accuracy. "
    ]
   },
   {
@@ -2392,7 +2299,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_Type your answer here, replacing this text._"
+    "1. Calling fit_transform on the test data violates the golden rule of machine learning because it allows the vectorizer to learn from unseen data, leading to data leakage. Instead, we should use fit_transform on the training data and only apply transform to the test data to ensure proper generalization.\n",
+    "\n",
+    "2. I would choose predict_proba because it provides probability estimates for each class, allowing us to set decision thresholds and analyze model confidence. Additionally, predict_proba can be used to derive predict, but the reverse is not possible.\n",
+    "\n",
+    "3. RandomizedSearchCV is faster than GridSearchCV because it samples a fixed number of hyperparameter combinations instead of testing all possibilities. It is also more effective when some parameters are more important, as it increases the likelihood of finding optimal values without wasting time on less influential ones."
    ]
   },
   {
