--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -891,19 +891,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. The DummyClassifier score (74%) vs Logistic Regression score (89%)"
+    "1. The DummyClassifier score (74%) is lower than the Logistic Regression score (89%). This suggests that the Logistic Regression score is more accurate and could be due to the fact that Logistic Regression assings probabilities to predictions and uses a decision boundary. Whereas in the case of a DummyClassifier, it would use the most frequent class which may no always lead to the correct classification and simply, a baseline performance, leading to lower accuracy. Furthermore, Logistic Regression also tries to find relationships between features and target variables, enhancing its ability to predict the target more accurately. While on the other hand, a DummyClassifier makes static, rule-based predictions.\n",
+    "\n",
+    "2. 0.89186851, 0.90023068, 0.89561707, 0.88956171, 0.89965398\n",
+    "\n",
+    "3. The scores are quite close to each other, they hover around 89-90% with the max score being 90.023068% and min score being 89.186851%, a 0.836217% difference. This suggests that are our scores have low variability and that our Logistic Regression model is generalizing well across different subsets of data.\n",
+    "\n",
+    "4. The trumptweets dataset is significantly greater in terms of number of rows as compared to the cities dataset (41 123 rows vs 210 rows). More data means that whilst doing our cross-validation, each fold has access to a greater amount of diverse training data, leading a more representative and a better generalization of patterns on the unseen data. Additionally, with the greater amount of rows, it allows for better generalization of the model, whereby more relationships and trends are able to be detected, leading to a more conclusive analysis and prediction."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 46,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.89186851, 0.90023068, 0.89561707, 0.88956171, 0.89965398])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "cv_scores = ...\n",
-    "..."
+    "cv_scores = cross_val_score(pipe, X_train, y_train)\n",
+    "cv_scores"
    ]
   },
   {
