--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -7,16 +7,7 @@
     "deletable": false,
     "editable": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n",
-      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize Otter\n",
     "import otter\n",
@@ -825,7 +816,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q2.2</pre></strong> passed! 🙌</p>"
+       "<p><strong><pre style='display: inline;'>q2.2</pre></strong> passed! 💯</p>"
       ],
       "text/plain": [
        "q2.2 results: All test cases passed!"
@@ -891,18 +882,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. The DummyClassifier score (74%) is lower than the Logistic Regression score (89%). This suggests that the Logistic Regression score is more accurate and could be due to the fact that Logistic Regression assings probabilities to predictions and uses a decision boundary. Whereas in the case of a DummyClassifier, it would use the most frequent class which may no always lead to the correct classification and simply, a baseline performance, leading to lower accuracy. Furthermore, Logistic Regression also tries to find relationships between features and target variables, enhancing its ability to predict the target more accurately. While on the other hand, a DummyClassifier makes static, rule-based predictions.\n",
+    "1. The DummyClassifier score (74%) is lower than the Logistic Regression score (89%). This suggests that the Logistic Regression score is more accurate and could be due to the fact that Logistic Regression assigns probabilities to predictions and uses a decision boundary. Whereas in the case of a DummyClassifier, it would use the most frequent class which may not always lead to the correct classification and is simply, a baseline performance, leading to lower accuracy. Furthermore, Logistic Regression also tries to find relationships between features and target variables, enhancing its ability to predict the target more accurately. While on the other hand, a DummyClassifier makes static, rule-based predictions.\n",
     "\n",
     "2. 0.89186851, 0.90023068, 0.89561707, 0.88956171, 0.89965398\n",
     "\n",
     "3. The scores are quite close to each other, they hover around 89-90% with the max score being 90.023068% and min score being 89.186851%, a 0.836217% difference. This suggests that are our scores have low variability and that our Logistic Regression model is generalizing well across different subsets of data.\n",
     "\n",
-    "4. The trumptweets dataset is significantly greater in terms of number of rows as compared to the cities dataset (41 123 rows vs 210 rows). More data means that whilst doing our cross-validation, each fold has access to a greater amount of diverse training data, leading a more representative and a better generalization of patterns on the unseen data. Additionally, with the greater amount of rows, it allows for better generalization of the model, whereby more relationships and trends are able to be detected, leading to a more conclusive analysis and prediction."
+    "4. The trumptweets dataset is significantly greater in terms of number of rows as compared to the cities dataset (41 123 rows vs 210 rows). More data means that whilst doing our cross-validation, each fold has access to a greater amount of diverse training data, leads to a more representative training set and a better generalization of patterns on unseen data. This suggests why there is a low variation in our sub-scores across the 5 folds. Additionally, with the greater amount of rows, it allows for better generalization of the model, whereby more relationships and trends are able to be detected, leading to a more conclusive analysis and prediction."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 17,
    "metadata": {
     "tags": []
    },
@@ -913,7 +904,7 @@
        "array([0.89186851, 0.90023068, 0.89561707, 0.88956171, 0.89965398])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -984,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -1030,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "tags": []
    },
@@ -1058,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 21,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -1067,13 +1058,13 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q2.4</pre></strong> passed! 🌈</p>"
+       "<p><strong><pre style='display: inline;'>q2.4</pre></strong> passed! 🍀</p>"
       ],
       "text/plain": [
        "q2.4 results: All test cases passed!"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1116,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -1157,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 23,
    "metadata": {
     "tags": []
    },
@@ -1197,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 24,
    "metadata": {
     "tags": []
    },
@@ -1208,7 +1199,7 @@
        "['fake', 'coronavirus', 'harassment', 'transcripts', 'democrats']"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1219,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 25,
    "metadata": {
     "tags": []
    },
@@ -1230,7 +1221,7 @@
        "['realdonaldtrump', 'barackobama', 'trump2016pic', 'donaldtrump', 'thanks']"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1241,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 26,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -1250,13 +1241,13 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q2.5</pre></strong> passed! 🚀</p>"
+       "<p><strong><pre style='display: inline;'>q2.5</pre></strong> passed! ✨</p>"
       ],
       "text/plain": [
        "q2.5 results: All test cases passed!"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1337,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 28,
    "metadata": {
     "tags": []
    },
@@ -1355,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 29,
    "metadata": {
     "tags": []
    },
@@ -1366,7 +1357,7 @@
        "0.9008073817762399"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1377,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 30,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -1386,13 +1377,13 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q2.6</pre></strong> passed! 🙌</p>"
+       "<p><strong><pre style='display: inline;'>q2.6</pre></strong> passed! 🍀</p>"
       ],
       "text/plain": [
        "q2.6 results: All test cases passed!"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1452,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 31,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1503,7 +1494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 32,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1583,7 +1574,7 @@
        "4        100000  0.976399  0.895386"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1939,7 +1930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 37,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -1985,7 +1976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 38,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -1994,13 +1985,13 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q3.3</pre></strong> passed! 💯</p>"
+       "<p><strong><pre style='display: inline;'>q3.3</pre></strong> passed! 🍀</p>"
       ],
       "text/plain": [
        "q3.3 results: All test cases passed!"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2125,7 +2116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 39,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -2156,7 +2147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 40,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -2165,13 +2156,13 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q3.5</pre></strong> passed! 🌈</p>"
+       "<p><strong><pre style='display: inline;'>q3.5</pre></strong> passed! 🍀</p>"
       ],
       "text/plain": [
        "q3.5 results: All test cases passed!"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
