--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -367,7 +367,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q1</pre></strong> passed! 🌈</p>"
+       "<p><strong><pre style='display: inline;'>q1</pre></strong> passed! 🙌</p>"
       ],
       "text/plain": [
        "q1 results: All test cases passed!"
@@ -816,7 +816,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q2.2</pre></strong> passed! 💯</p>"
+       "<p><strong><pre style='display: inline;'>q2.2</pre></strong> passed! 🌈</p>"
       ],
       "text/plain": [
        "q2.2 results: All test cases passed!"
@@ -1058,7 +1058,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q2.4</pre></strong> passed! 🍀</p>"
+       "<p><strong><pre style='display: inline;'>q2.4</pre></strong> passed! ✨</p>"
       ],
       "text/plain": [
        "q2.4 results: All test cases passed!"
@@ -1241,7 +1241,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q2.5</pre></strong> passed! ✨</p>"
+       "<p><strong><pre style='display: inline;'>q2.5</pre></strong> passed! 🙌</p>"
       ],
       "text/plain": [
        "q2.5 results: All test cases passed!"
@@ -1377,7 +1377,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q2.6</pre></strong> passed! 🍀</p>"
+       "<p><strong><pre style='display: inline;'>q2.6</pre></strong> passed! 🚀</p>"
       ],
       "text/plain": [
        "q2.6 results: All test cases passed!"
@@ -1985,7 +1985,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q3.3</pre></strong> passed! 🍀</p>"
+       "<p><strong><pre style='display: inline;'>q3.3</pre></strong> passed! ✨</p>"
       ],
       "text/plain": [
        "q3.3 results: All test cases passed!"
@@ -2156,7 +2156,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q3.5</pre></strong> passed! 🍀</p>"
+       "<p><strong><pre style='display: inline;'>q3.5</pre></strong> passed! 💯</p>"
       ],
       "text/plain": [
        "q3.5 results: All test cases passed!"
